# hiemal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meta.yaml  setup.py
.github/workflows/: run_tests.yml
cmake/: cmake_info.h.in  gdbinit.in  version.h.in
cmake/Modules/: FindPulseAudio.cmake  FindSphinx.cmake  _Find_Protobuf.cmake
cmake/pkgconfig/: hiemal.pc.in
docs/: CMakeLists.txt  Doxyfile.in  buffer.rst  conf.py.in  dsp.rst  hl_api.rst  index.rst  internals.rst  io.rst  ll_api.rst
docs/_templates/: footer.html
docs/man/: hminfo.1
src/core/: CMakeLists.txt  alsa.c  async.c  backend.c  buffer.c  common.c  common_unix.c  device.c  dsp.c  error.c  event_unix.c  fmt.c  info.c  io.c  logging.c  math.c  playback.c  pulse.c  recording.c  scheduler.c  semaphore_unix.c  signal_chain.c  stream.c  switchboard.c  switchboard_unix.c  thread.c  thread_unix.c
src/core/include/: buffer.h  core.h  dsp.h  error.h  fmt.h  playback.h  signal_chain.h
src/core/include/api/: async.h  buffer.h  recording.h  switchboard.h
src/core/include/intern/: alsa.h  async.h  backend.h  buffer.h  common.h  core.h  device.h  dsp.h  error.h  event.h  fmt.h  info.h  io.h  logging.h  math.h  playback.h  pulse.h  recording.h  scheduler.h  semaphore.h  signal_chain.h  switchboard.h  thread.h
src/core/include/util/: args.h  file.h  str.h  tty.h  unicode.h
src/core/intern/: async.c  math.c
src/core/ops/: CMakeLists.txt  ops.c.in  ops.h.in  ops_internal.h.in
src/core/ops/dsp/: filter.c
src/core/ops/util/: gen_ops.py
src/protobuf/: CMakeLists.txt  buffer.proto
src/protobuf/_c_wrap/: hm_protobuf.cpp  hm_protobuf.h
src/python/: CMakeLists.txt  hiemal.c
src/python/hiemal/: __init__.py
src/python/hiemal/backend/src/: _hm_pywrap.c
src/python/hiemal/tools/: protobuf.py
src/util/: CMakeLists.txt  args.c  file.c  str.c  tty.c  unicode.c
src/utils/: CMakeLists.txt  hminfo.c
test/: CMakeLists.txt  common.c  test_alsa.c  test_args.c  test_async.c  test_buffer.c  test_common.c  test_dsp.c  test_event.c  test_file.c  test_io.c  test_main.c  test_main.c.in  test_math.c  test_op_filter.c  test_pb_c_wrap.c  test_pulse.c  test_semaphore.c  test_str.c  test_switchboard.c  test_thread.c
test/include/: test_async.h  test_buffer.h  test_common.h  test_dsp.h  test_io.h  test_math.h  test_pb_c_wrap.h  util.h
test/include/mock/: mock_async.h
test/mock/: mock_async.c
test/python/: py_tests.py  test_opsgen.py
test/util/: gendriver.py  util.c
util/python/: lex.py
